--- a/LanguageSupport/ResourceLang.ar-JO.resx
+++ b/LanguageSupport/ResourceLang.ar-JO.resx
@@ -118,6 +118,12 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="lbl_Home" xml:space="preserve">
-    <value>Home</value>
+    <value>Home Page</value>
+  </data>
+  <data name="lbl_UserNotFound" xml:space="preserve">
+    <value>اسم المستخدم او كلمة المرور غير صحيحة</value>
+  </data>
+  <data name="lbl_UserExist" xml:space="preserve">
+    <value>الاسم موجود بالفعل</value>
   </data>
 </root>
