--- a/LanguageSupport/ResourceLang.en-US.resx
+++ b/LanguageSupport/ResourceLang.en-US.resx
@@ -120,4 +120,10 @@
   <data name="lbl_Home" xml:space="preserve">
     <value>الرئيسية</value>
   </data>
+  <data name="lbl_UserNotFound" xml:space="preserve">
+    <value>Username or password is incorrect</value>
+  </data>
+  <data name="lbl_UserExist" xml:space="preserve">
+    <value>The name already exists</value>
+  </data>
 </root>
